--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "KnightBot-MD",
+    "name": "NEOSYNE-MD",
     "description": "Advanced WhatsApp Bot with Multiple Features",
     "keywords": [
         "bot",
@@ -40,7 +40,7 @@
         },
         {
             "url": "https://github.com/DuckyTeam/heroku-buildpack-imagemagick"
-        }
+        },
     ],
     "addons": [
         {
